# soundmodem

./: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  cfgwinbns  cfgwindows  cfgwindowsnodebug  config.h.in  configure  configure.ac  configure.in  soundmodem.spec
afsk/: Makefile.in  modem.c
configapp/: Makefile.in  acconfig.h  aclocal.m4  config.h.in  configapp.gladep
configapp/src/: Makefile.am  Makefile.in  app.c  callbacks.c  callbacks.h  diag.c  interface.c  main.c  scope.c  scope.h  spectrum.c  spectrum.h
directx/: Makefile.in
directx/include/xx/: mmsystem.h  objbase.h
doc/: Makefile.in  main.tex
doc/selfdocbook/: Makefile  fdl.sgml  intro.sgml  selfdocbook.sgml  simple.fig  source.sgml  structure.sgml  tips.sgml  tools.sgml
flexdrv/: Makefile.in  soundmodem.c
flexdrv/tmp/: resource.h  resrc1.h  soundmodem.aps  soundmodem.rc
fsk/: Makefile.am  Makefile.in  gendf9icfilt.cc  modem.c  modemeq.c  modempsp.c
intl/: Makefile.in
libmisc/: Makefile.am  Makefile.in  raisedcosine.h  rrctime.c
matlib/: Makefile.in  mat.hh
newqpsk/: ChangeLog  Makefile.am  Makefile.in  README  demodulator.c  filter-i386.h  filter.c  modemconfig.h  modulator.c  newqpskrx.c  newqpskrx.h  newqpsktx.c  newqpsktx.h
p3dmodem/: Makefile.in
pammodem/: Makefile.in
po/: ChangeLog  cat-id-tbl.c  fr.po  modem3.pot  soundmodem.pot  sv.po
pskmodem/: Makefile.in
soundcard/: Makefile.am  Makefile.in  alsaio.c  kisspkt.c  main.c  ptt.c  pttio.h  testkiss.c
